# Vectra

./: .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  DOC_INDEX.md  EXACORDEX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  KEYINDEX.md  Makefile  README.md  VECTRAS_MEGAPROMPT_DOCS.md  build.gradle  gradlew  rmr_lowlevel.h  rmr_unified_kernel.h  settings.gradle
.ci/: RAFAELIA_ATLAS_DOMINIOS_ESPIRAL.md  RAFAELIA_SESSAO_COMPLETA.md  rmr_asm_x86_64.S  rmr_core.h
.github/workflows/: 2and.yml  Autoral.yml  Bec.yml  Build2.yml  Caos.c  Debugautoral.md  Kt.c  Laudo.yml  Pior.c  Scan-all-errors.yml  Unfied_vectra.yml  Vbiuld.yml  Ve.yml  Vectra Adaptive CI.yml  aaaa-pipeline.yml  android (1).yml  android (2).yml  android-arm64-build.yml  android-arm642.yml  android-build-manual.yml  android-minimal-debug.yml  android-verified (1).yml  android-verified.yml  android.yml  build-apk.yml  build-rmr.yml  build-zip.yml  ci.yml  engine-ci.yml  model-s-rebuild.yml  proof-build.yml  rafcode-phi-baremetal-ci.yml  reusable-build-cmake.yml  reusable-build-make.yml  reusable-selftests.yml  reusable-setup-toolchain.yml  reusable-upload-artifacts.yml  termux-orchestrator.yml  vectra-core.yml  vectras-ci.yml  (+1 more)
3dfx/: FILES_MAP.md  README.md
Colocar/: Makefile.patch  Readme.md  VECTRA_v12_BETA_REPORT.md  ci.yml  sources_rmr_core.cmake  sources_rmr_core.mk  vectras-ci.yml
__DELTA__/: CMakeLists.txt  DELETE_LIST.txt  Makefile.patch  PATCH_NOTES.md
__DELTA__/.github/workflows/: android-arm642.yml  build-zip.yml  engine-ci.yml  vectras-ci.yml
__DELTA__/engine/rmr/: sources.cmake  sources_rmr_core.cmake  sources_rmr_core.mk
__DELTA__/tools/: verify_rmr_source_alignment.sh
_incoming/: vectras_github_ci_fix.patch
aaaa/: LICENSE_RAFAEL.md
addthis/: Apli.md  Du.md  Exaceodex.md  VECTRAS_BUGS.md  VECTRAS_PROBLEMS.md  VECTRAS_SOLUTIONS.md  apply_fixes_phase1.sh  rmr_types.h
app/: .gitignore  FILES_MAP.md  FIREBASE.md  README.md  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hardware_profile_bridge.c  vectra_core_accel.c
archive/: FILES_MAP.md  README.md
asm/arm64/: model_s_step.S
asm/x86_64/: model_s_step.S
bench/: FILES_MAP.md  README.md
bench/scripts/: run_bench.sh
bench/src/: rmr_benchmark_main.c
bug/: ANALISE_70_METRICAS_DATACENTER.md  ANALISE_COMPLETA_8_NIVEIS_SEMANTICOS.md  ANALISE_REAL_COMPILACAO_HARDWARE.md  ANALISE_REAL_HARDWARE_COMPLETA.md  ANALISE_SO_COMPLETO_BIOS_FIRMWARE_BOOTLOADER.md  AUTOTUNE_ADAPTATIVO_REAL.md  BUGS_ENUMERATION.md  BUG_FIXES.md  COMPARACAO_UPSTREAM_VS_OTIMIZADO.md  EXPERIENCIA_USUARIO_IMPACTO_TRABALHO.md  FILES_MAP.md  MATRIZ_T_ESPACO_ESTADOS_VERDADE.md  README.md  SIGMA_SUMMARY.txt  STATUS_IMPLEMENTACAO_COMPLETO.md  VECTRAS_ANALISE_TECNICA_DETALHADA.md  VECTRAS_CODIGO_ALEM_DOCUMENTACAO.md  VERDADE_CRITICA_SEM_ABSTRACCAO.md  Vectras_BugReport.md
bug/core/: NUCLEUS_README.md  README.md  rmr_casm_arm64.S  rmr_casm_riscv64.S  rmr_casm_x86_64.S  rmr_lowlevel.h  rmr_policy_kernel.h  rmr_unified_kernel.c  rmr_unified_kernel.h
bug/experiments/: FILES_MAP.md  README.md  TEMPLATE.metadata.json  inventory.json
bug/experiments/failed/: README.md
dataset/: MANIFEST.json  README.md
dataset/core/: structural_samples.jsonl
dataset/errors/: error_samples.jsonl
dataset/geometric/: geometric_samples.jsonl
dataset/recursive/: recurrence_samples.jsonl
dataset/schemas/: error.schema.json  geometric.schema.json  recurrence.schema.json  structural.schema.json
demo_cli/: FILES_MAP.md  README.md
demo_cli/src/: apk_module_demo.c  bitomega_smoketest.c  bitraf_selftest.c  main.c  math_fabric_selftest.c  policy_kernel_demo.c  policy_kernel_selftest.c  rmr_invariant_extractor_selftest.c  rmr_ir_abi_selftest.c  rmr_qemu_bridge_selftest.c  rmr_unified_arena_selftest.c  vectra_pulse_selftest.c
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  BENCHMARK_MANAGER.md  BUILD_ENV_ALIGNMENT.md  CONTRIBUTING.md  DOCUMENTATION_STANDARDS.md  ESFERAS_METODOLOGICAS_RAFAELIA.md  FILES_MAP.md  IMAGES_INDEX.md  INTEGRACAO_RM_QEMU_ANDROIDX.md  IP_MAP.md  LEGAL_AND_LICENSES.md  LOWLEVEL_API_CONTRACT_CHECKLIST.md  LOWLEVEL_ATTRACTOR_DELTA_ANALYSIS.md  OPERATIONS.md  RAFAELIA_COHESION_ENTERPRISE_STACK.md  RAFCODE_PHI_COMPILER_HEADER.md  README.md  RESUMO.md  ROADMAP.md  ROOT_FILE_CHAIN.md  Rafaelmeloreis.md  Rafaelmeloreisnovo.md  Rafaelmeloreisnovo2.md  SECURITY.md  SURGICAL_PATCHSET.md  THREE_LAYER_ANALYSIS.md  VM_SUPERVISION_AUDIT_EVIDENCE.md  VM_SUPERVISION_NEXT_5_STEPS.md  Vou.md
docs/assets/: CHAT_PROMPT_PROVENANCE.md  MANIFEST.md
docs/bitomega_postdoc/: README.md  validate_pack.sh
docs/navigation/: BENCHMARK_COMPARISONS.md  ENTERPRISE_COMPANIES.md  HIGH_LEVEL_INVESTORS.md  INDEX.md  PERFORMANCE_OPERATIONS.md  SCIENTISTS_RESEARCH.md  UNIVERSITIES_ACADEMIC.md
engine/: FILES_MAP.md  README.md
engine/rmr/: README.md  sources.cmake  sources.mk  sources_rmr_core.cmake  sources_rmr_core.mk
fastlane/: FILES_MAP.md  README.md
gradle/: FILES_MAP.md  README.md
include/: model_s.h
reports/: FILES_MAP.md  README.md  promotion_governance_report.md
resources/: FILES_MAP.md  README.md
runtime/: FILES_MAP.md  README.md
shell-loader/: .gitignore  FILES_MAP.md  README.md
src/: main.c  model_s.c
terminal-emulator/: FILES_MAP.md  README.md
terminal-view/: FILES_MAP.md  README.md
tools/: FILES_MAP.md  README.md  bitomega_csv_to_dot.py  bootstrap_qemu.sh  bug_experiment_inventory.py  check_docs_reference_commit.sh  export_source_tarball.sh  invariant_golden.txt  mirror_alpine_apk_failures.sh  prefetch_bootstrap_downloads.sh  qemu_launch.yml  v_integrity_check.py  validate_dot_file.cmake  vectra_probe.sh  verify_bootstrap_assets.py  verify_bug_core_promotion.py  verify_engine_source_parity.py  verify_repo_file_dependencies.py  verify_rmr_source_alignment.sh
tools/baremetal/: dir_integrity_matrix.sh
tools/termux-arm64-orchestrator/: README.md  TOOLCHAIN_LICENSES.md  legal-compliance-check.sh  orchestrate-build.sh  run-local-termux-build.sh
web/: FILES_MAP.md  README.md
web/data/: UpdateConfig.json
(+227 files in other folders)
